fix: omit empty sub-directory from list